# Medical_Software

./: README.md  pyproject.toml
_server/_server/: settings.py
_server/core/: excel_importer.py  middleware.py  models.py  reportgen.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py  0002_alter_log_user_alter_patient_primary_insurance_and_more.py  0003_patient_email.py  0004_alter_log_date.py  0005_rename_cost_of_reimbursement_patient_cost_of_hearing_aid.py
_server/registration/: views.py
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
client/: index.html  main.cjs  main.js  package-lock.json  package.json
client/public/: login_signup.css
client/src/: App.jsx  Central.jsx  CreatePatientPage.jsx  EditPatient.jsx  Login.jsx  Logs.jsx  ModalComponent.jsx  Nav.jsx  Patient.jsx  Signup.jsx  TableRowComponent.jsx  main.jsx
client/src/Utils/: make_request.js  parseCookie.js
client/src/public/: central.css
