[tool.poetry]
name = "Medical_Software"
version = "0.1.0"
description = ""
authors = ["Hunter Peart <hman1148@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.4"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
reportlab = "^4.0.8"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
